--- a/css/global.css
+++ b/css/global.css
@@ -298,11 +298,11 @@ select::-ms-expand {
 }
 
 .swiper-button-prev {
-    left: -21px;
+    left: -14px;
 }
 
 .swiper-button-next {
-    right: -21px;
+    right: -14px;
 }
 
 .swiper-button-prev::after,
@@ -814,6 +814,7 @@ select::-ms-expand {
     transform: scale(0);
     transform-origin: 100% 0;
     transition: var(--default-transition);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .25);
 }
 
 .header__mobile-more-dropdown.active {
