--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ body.active {
     top: 0;
     transition: var(--default-transition);
     z-index: 950;
+    flex-shrink: 0;
+}
+
+.header.header--404 {
+    background-color: var(--search-color);
 }
 
 .header.popup-active {
@@ -72,6 +77,7 @@ body.active {
 .header__top-info {
     position: relative;
     padding-right: 15px;
+    cursor: pointer;
 }
 
 .header__top-link {
@@ -110,13 +116,17 @@ body.active {
     transition: var(--default-transition);
 }
 
+.header.scroll .header__top-info-dropdown {
+    display: none;
+}
+
 .header__top-info-dropdown {
     display: none;
     position: absolute;
     z-index: 990;
     background-color: #fff;
     top: calc(100% + 10px);
-    right: -32px;
+    right: 0;
     padding: 15px;
     border-radius: 10px;
 }
@@ -436,7 +446,6 @@ body.active {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-    min-height: calc(100vh - 196px);
     position: relative;
 }
 
@@ -469,10 +478,6 @@ body.active {
     gap: 20px;
 }
 
-.catalog-popup__menu-item+.catalog-popup__menu-item {
-    margin-top: 25px;
-}
-
 .catalog-popup__menu-item:last-child {
     margin-bottom: 35px;
 }
@@ -480,6 +485,7 @@ body.active {
 .catalog-popup__menu-link {
     max-width: 180px;
     color: var(--text-black-color);
+    padding: 15px 0;
 }
 
 .catalog-popup__categories {
@@ -599,15 +605,15 @@ body.active {
     margin-top: 3px;
 }
 
-.oval-btn--all-categories.active .close span:first-child {
+.header__content:has(.catalog-popup.active) .oval-btn--all-categories .close span:first-child {
     transform: translateY(2px) rotate(45deg);
 }
 
-.oval-btn--all-categories.active .close span:nth-child(2) {
+.header__content:has(.catalog-popup.active) .oval-btn--all-categories .close span:nth-child(2) {
     display: none;
 }
 
-.oval-btn--all-categories.active .close span:nth-child(3) {
+.header__content:has(.catalog-popup.active) .oval-btn--all-categories .close span:nth-child(3) {
     transform: translateY(0) rotate(-45deg);
     margin-top: 0;
 }
@@ -2316,6 +2322,7 @@ span.brands__item-name {
 .footer {
     background-color: var(--main-black);
     color: #fff;
+    flex-shrink: 0;
 }
 
 .footer a {
