--- a/css/category.css
+++ b/css/category.css
@@ -737,6 +737,7 @@ ul.products-pagination {
 .product-card.row .product-card__color {
     padding: 0;
     margin-top: 20px;
+    display: flex;
 }
 
 .product-card.row .product-card__color.skeleton::before {
