--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import url('./personal.css');
 @import url('./compare.css');
 @import url('./auth.css');
+@import url('./favorites.css');
 
 
 /* HEADER START */
