--- a/css/cart.css
+++ b/css/cart.css
@@ -1,11 +1,11 @@
 /* CART-EMPTY START */
 
-.cart-empty,
+.page-empty,
 .cart {
     margin-bottom: 100px;
 }
 
-.cart-empty__inner {
+.page-empty__inner {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,12 +13,12 @@
     padding: 70px 0 0 0;
 }
 
-.cart-empty img {
+.page-empty img {
     width: 134px;
     height: 85px;
 }
 
-.cart-empty__title {
+.page-empty__title {
     margin-top: 25px;
     text-transform: uppercase;
     font-size: 25px;
@@ -26,11 +26,11 @@
     font-weight: 600;
 }
 
-.cart-empty__text {
+.page-empty__text {
     margin-top: 10px;
 }
 
-.rect-btn--cart-empty {
+.rect-btn--page-empty {
     margin-top: 30px;
     font-size: 12px;
     padding: 10px 20px;
