--- a/css/media.css
+++ b/css/media.css
@@ -128,6 +128,9 @@
     .product-box__gallery {
         max-width: 450px;
     }
+    .products__main.favorite.tiles {
+        /* grid-template-columns: repeat(4, 270px); */
+    }
 }
 
 @media (max-width: 1320px) {
@@ -668,7 +671,7 @@
         padding-bottom: 100px;
     }
 
-    .products-view-buttons {
+    .swap-display-buttons {
         display: none;
     }
 
@@ -1466,6 +1469,10 @@
     .personal__tiles {
         justify-content: space-between;
     }
+    .products__main.favorite.tiles {
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: space-between;
+    }
 }
 
 @media (max-width: 620px) {
@@ -1889,6 +1896,9 @@
     .personal__tile-link p {
         font-size: 14px;
     }
+    .favorites__header {
+        justify-content: space-between;
+    }
 }
 
 @media (max-width: 500px) {
@@ -2288,6 +2298,21 @@
     .personal__tile-link p {
         font-size: 12px;
     }
+    #category-sort button,
+    #favorite-sort button {
+        font-size: 12px;
+    }
+    #category-sort button::after,
+    #favorite-sort button::after {
+        margin-left: 0.5em;
+    }
+    .rect-btn--favorites-clear {
+        font-size: 10px;
+        height: 35px;
+    }
+    .favorites__header {
+        gap: 5px;
+    }
 }
 
 @media (max-width: 400px) {
@@ -2532,6 +2557,9 @@
     }
     .personal {
         margin: 20px 0;
+    }
+    .rect-btn--favorites-clear {
+        padding: 5px;
     }
 }
 
