--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 @import url('./compare.css');
 @import url('./auth.css');
 @import url('./favorites.css');
+@import url('./search.css');
 
 
 /* HEADER START */
@@ -281,9 +282,9 @@ body.active {
     display: block;
 }
 
-.header__search-input:not(:focus)~.search-result {
+/* .header__search-input:not(:focus)~.search-result {
     display: none;
-}
+} */
 
 .search-result {
     position: absolute;
