Сверстал страницу брендов

--- a/css/category.css
+++ b/css/category.css
@@ -433,9 +433,7 @@
     font-weight: 400;
 }
 
-#category-sort button,
-#favorite-sort button,
-#search-sort button {
+.itc-select:not(#order-select):not(#order-select-entity) button {
     border: 1px solid var(--main-blue);
     background-color: transparent;
     border-radius: 5px;
@@ -451,17 +449,13 @@
     z-index: 15;
 }
 
-#category-sort button::after,
-#favorite-sort button::after,
-#search-sort button::after {
+.itc-select:not(#order-select):not(#order-select-entity) button::after {
     background-image: url('../img/icons/arrow-filter-blue.svg');
     width: 9px;
     height: 6px;
 }
 
-#category-sort .itc-select__dropdown,
-#favorite-sort .itc-select__dropdown,
-#search-sort .itc-select__dropdown {
+.itc-select:not(#order-select):not(#order-select-entity) .itc-select__dropdown {
     max-height: none;
 }
 
