--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 @import url('./auth.css');
 @import url('./favorites.css');
 @import url('./search.css');
-
+@import url('./brands.css');
 
 /* HEADER START */
 
