--- a/css/media.css
+++ b/css/media.css
@@ -1121,6 +1121,10 @@
     .personal__item.tile p {
         color: #fff;
     }
+    .brands__content {
+        gap: 20px;
+        grid-template-rows: 1fr;
+    }
 }
 
 @media (max-width: 820px) {
@@ -1899,6 +1903,9 @@
     .favorites__header {
         justify-content: space-between;
     }
+    .brands__content {
+        margin-top: 20px;
+    }
 }
 
 @media (max-width: 500px) {
@@ -2298,14 +2305,10 @@
     .personal__tile-link p {
         font-size: 12px;
     }
-    #category-sort button,
-    #favorite-sort button,
-    #search-sort button {
+    .itc-select:not(#order-select):not(#order-select-entity) button {
         font-size: 12px;
     }
-    #category-sort button::after,
-    #favorite-sort button::after,
-    #search-sort button::after {
+    .itc-select:not(#order-select):not(#order-select-entity) button::after {
         margin-left: 0.5em;
     }
     .rect-btn--favorites-clear {
@@ -2317,6 +2320,9 @@
     }
     .info-search-form input {
         padding: 10px 50px;
+    }
+    .brands__content {
+        grid-template-columns: 1fr;
     }
 }
 
@@ -2565,6 +2571,15 @@
     }
     .rect-btn--favorites-clear {
         padding: 5px;
+    }
+    .brands__item {
+        height: 160px;
+    }
+    .brands__item-preview {
+        height: calc(100% - 30px);
+    }
+    span.brands__item-name {
+        height: 30px;
     }
 }
 
