--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 @import url('./search.css');
 @import url('./brands.css');
 @import url('./brand.css');
+@import url('./actions.css');
 
 /* HEADER START */
 
