--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 @import url('./brands.css');
 @import url('./brand.css');
 @import url('./actions.css');
+@import url('./contacts.css');
 
 /* HEADER START */
 
